# fsapp

./: .editorconfig  .env-example  .gitignore  .pylintrc  CHANGELOG.md  Gruntfile.js  LICENSE  Procfile  README.md  ROADMAP.txt  TODO.md  app.py  config.py  dash_trans.py  dashapp.py  get_version_info.py  init.ps1  init.sh  package-lock.json  package.json  pd_ez.py  requirements-wsl.txt  requirements.txt  runtime.txt  settings.py  setup.cfg  test_api_query.py  version-info.json
.github/: TODO.md
.github/workflows/: python.yml
app/: __init__.py  requirements.txt  routes.py
app/data/: FBApi.py  elo.py  pd_mani.py  run_calcs.py  updater.py  updater_json.py  wRz.py  write_static_jsons.py  write_statics.py
app/data/static/: __init__.py
app/json/: BL.json  DED.json  ELC.json  FL1.json  PD.json  PL.json  PPL.json  SA.json  areas.json  competitions-all.json  competitions-plus3.json  competitions-stored.json  teams.json
app/static/css/: main.css
app/templates/: elotable.html.jinja  index.html.jinja
app/templates/layouts/: base.html.jinja
assets/: app.css  app.css.map
data/: FBApi.py  pd_mani.py  run_calcs.py  wRz.py
data/static/: __init__.py
deprecated/: pd_ez.py  requirements-py38.txt
json/: ASL.json  BSA.json  PL.json  SA.json
resources/sass/: app.scss  primary.scss
resources/sass/theme/: breadcrumb-mixins.scss  breadcrumb.scss  color-reference.scss  navbar-mixins.scss  (+3 more)
tests/: test_api_query.py
utils/: colorscale.scss  colorutils.py  df_to_def_dict.py  fix_reqs_pipwin.py  get_version_info.py  snippets.rst  summary_stats.py  version-info.json
