[metadata]
name = elo_football_ratings
version = 0.1.0
author = Alex Munger
author-email = munger.alex@gmail.com
home-page = https://fs-mir-pro.herokuapp.com/
description = Elo Ratings for Football Leagues
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Mathematics

[flake8]
ignore =
    D203,
    E126,
    E127,
    E201,
    E202,
    E203,
    E241,
    E402,
    E501,
    F401,
    W292
exclude =
    .git,
    .idea,
    env,
    __pycache__,
    node_modules,
    build/,
    dist/,
    docs/,
    tests/
max-complexity = 15
max-line-length = 99